# groks_anisotropic_smoothing_endevaur-

./: grok.c  grok2.c  grokflower.c  grokgradient.c  hawaiian.c  hawaiin_flowers.c  pango-markup.c  sinewaves.c  smooth.c
FruitSalad_Gradients/: 10BlackGrape.ggr  11Peach.ggr  12Lemon.ggr  13Lime.ggr  14Tangerine.ggr  15Apple.ggr  1FruitSalad.ggr  2Tomato.ggr  3Coconut.ggr  4Melon.ggr  5Rasberry.ggr  6Blackberry.ggr  7Strawberry.ggr  8Banana.ggr  9Kiwi.ggr  README.txt
color_cubes/: grok2.c
hawaiin_flowers/: hawaiian.c  meson.build
reduced_code/: grok.c
tentacles/: grok.c
vibrance/: grok.c  grok2.c
